# cdmb

./: .gitignore  .zenodo.json  README.md  borrar.py  pyproject.toml
.github/workflows/: build_image.yml  release.yml
cdmb/: CommonDataModel.py  __init__.py
cdmb/cohort/: Cohort.py  Crosswalks.py  __init__.py
cdmb/entities/: Catalog.py  Entity.py  Rule.py  RuleSet.py  Variable.py  __init__.py
cdmb/project/: Author.py  Metadata.py  __init__.py
cdmb/relationships/: Relationship.py  __init__.py
cdmb/templates/: Utils.py  __init__.py
cdmb/templates/files/: .gitignore  README.md  _quarto.yml  check_load.py  dqa.py  man_container_deployment.md  r_report_template.qmd  readme_input.txt  readme_logs.txt  readme_outputs.txt  testing.py  validator.py  validator_report.qmd
cdmb/typing/: CommonDataModelTyping.py  __init__.py
cdmb/ui/: UILauncher.py  __init__.py
cdmb/ui/static_ui/: about.html  cohort.html  entities.html  index.html  project.html  summary.html  validation.html
cdmb/ui/static_ui/_app/: version.json
cdmb/ui/static_ui/_app/immutable/assets/: 0.83e0eb50.css  0.9c410628.css  0.Bw2xbFvd.css  2.LU0zgPFt.css  4.18440754.css  4.KmaTEWjv.css  _layout.ClX2pZcp.css  _layout.b15ec391.css  _layout.f2858481.css  _page.11cd5570.css  _page.CxVi64r8.css  _page.bf404883.css
cdmb/ui/static_ui/_app/immutable/chunks/: ActionIcon.0b4cf989.js  ActionIcon.978fdda9.js  Alert.2febe6fa.js  Alert.9525f411.js  Alert.9941749d.js  Alert.B1F2zJHM.js  Alert.ea610326.js  ArrowUp.DBbTR0pL.js  Button.4fad32cd.js  Button.68ac352c.js  Button.69bb87e3.js  Button.93ca5d0b.js  Button.DTaRDZiD.js  CloseButton.0aecb936.js  CloseButton.8475a75d.js  CloseButton.CbJewL1X.js  CloseButton.ccde3cf3.js  CloseButton.f264b4ed.js  Divider.5d14b319.js  Divider.623c8765.js  Divider.9841c3be.js  Divider.C7iLlWmY.js  Divider.ed7a49a3.js  Fileupload.660372cd.js  Fileupload.78d706fe.js  Fileupload.a352d429.js  Fileupload.c68773c0.js  Fileupload.rlAN1M-z.js  FloatingLabelInput.21cd1ebc.js  FloatingLabelInput.Bqx3feKt.js  FloatingLabelInput.b0f442b6.js  FloatingLabelInput.cd1dc319.js  Heading.6327a84d.js  Heading.759b5df3.js  Heading.BiZoC7ON.js  Heading.d11b27f1.js  Heading.d8491259.js  Indicator.svelte_svelte_type_style_lang.2b2de5aa.js  Indicator.svelte_svelte_type_style_lang.a98b1648.js  Indicator.svelte_svelte_type_style_lang.c543e185.js  (+102 more)
cdmb/ui/static_ui/_app/immutable/entry/: app.12924a32.js  app.34f7a124.js  app.87a4f69f.js  app.d9eebd2a.js  app.dbae3456.js  app.f4a7_2Nl.js  start.07ad94a0.js  start.124d4eb5.js  start.59ca5dbd.js  start.86a75ee8.js  start.C7Me1SZ0.js  start.cf96a1a1.js
cdmb/ui/static_ui/_app/immutable/nodes/: 0.29e60643.js  0.51906aee.js  0.5b2f9699.js  0.92ada6fb.js  0.BqKAMFQl.js  0.e64a23b3.js  1.29a1247d.js  1.a3d3c9e7.js  1.c14337bc.js  1.ccd215e5.js  1.e22fd99e.js  1.uucfeFRt.js  (+40 more)
docker/: Dockerfile
tests/: test_author.py  test_betweencomparison.py  test_catalog.py  test_cohort.py  test_commondatamodel.py  test_comparisonrule.py  test_composedrule.py  test_crosswalks.py  test_dummyrule.py  test_entity.py  test_invaluesrule.py  test_metadata.py  test_nullcheckingrule.py  test_relationship.py  test_rule.py  test_ruleset.py  test_variable.py
