[tool.poetry]
name = "cdmb"
version = "1.3.7"
description = "Common Data Model Builder library"
authors = [
    "Javier Gonz치lez-Galindo <jgonzalezga.iacs@aragon.es>",
    "Francisco Estupi침an-Romero <festupinnan.iacs@aragon.es>",
    "Santiago Royo-Sierra <sroyo.iacs@aragon.es>"
]

maintainers = [
    "Javier Gonz치lez-Galindo <jgonzalezga.iacs@aragon.es>",
    "Francisco Estupi침an-Romero <festupinnan.iacs@aragon.es>",
    "Santiago Royo-Sierra <sroyo.iacs@aragon.es>"
]

license = "CC-BY-NC-4.0"
repository = "https://github.com/cienciadedatosysalud/cdmb"
keywords = ["common data model", "real-world data", "health data", "synthetic data", "secondary use", "health", "healthcare"]

readme = "README.md"
packages = [{include = "cdmb"}]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation",
    "Topic :: Scientific/Engineering :: Bio-Informatics",  "Topic :: Scientific/Engineering :: Human Machine Interfaces"
]


[tool.poetry.dependencies]
python = ">=3.9, <=3.12.5"
pytest = "==8.3.2"
pandas = "==2.2.2"
faker = "==28.0.0"
duckdb = "==1.0.0"
graphviz = "==0.20.3"
fastapi = "==0.112.2"
rocrate = "==0.10.0"
openpyxl = "==3.1.5"
uvicorn = "==0.30.6"
python-multipart = "==0.0.9"
chardet = "==5.2.0"
poetry-semver = "==0.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^74.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
